--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,13 @@ dist.jar=${dist.dir}/ProjetJavaHopital.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jsch-0.1.51.jar=/Users/Louis/Downloads/Resssources Projet Java/lib/jsch-0.1.51.jar
-file.reference.mysql-connector-java-5.1.18-bin.jar=/Users/Louis/Downloads/Resssources Projet Java/lib/mysql-connector-java-5.1.18-bin.jar
+file.reference.jsch-0.1.51.jar=/Users/Louis/Desktop/Informatique ING3/Resssources Projet Java/lib/jsch-0.1.51.jar
+file.reference.mysql-connector-java-5.1.18-bin.jar=/Users/Louis/Desktop/Informatique ING3/Resssources Projet Java/lib/mysql-connector-java-5.1.18-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
-    ${file.reference.jsch-0.1.51.jar}
+    ${file.reference.jsch-0.1.51.jar}:\
+    ${file.reference.mysql-connector-java-5.1.18-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -60,7 +60,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=projetjavahopital.HopitalApplication
+main.class=projetjavahopital.Connexion
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
