ajout, suppression mise a jour

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,16 +30,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jsch-0.1.51.jar=/Users/Louis/Desktop/Informatique ING3/Resssources Projet Java/lib/jsch-0.1.51.jar
-file.reference.jsch-0.1.51.jar-1=C:\\Users\\victo\\Documents\\ECE Paris\\ING3 - ECE\\JAVA\\JDBCV2018\\JDBCV2018\\lib\\jsch-0.1.51.jar
 file.reference.mysql-connector-java-5.1.18-bin.jar=/Users/Louis/Desktop/Informatique ING3/Resssources Projet Java/lib/mysql-connector-java-5.1.18-bin.jar
-file.reference.mysql-connector-java-5.1.18-bin.jar-1=C:\\Users\\victo\\Documents\\ECE Paris\\ING3 - ECE\\JAVA\\JDBCV2018\\JDBCV2018\\lib\\mysql-connector-java-5.1.18-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jsch-0.1.51.jar}:\
-    ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
-    ${file.reference.jsch-0.1.51.jar-1}:\
-    ${file.reference.mysql-connector-java-5.1.18-bin.jar-1}
+    ${file.reference.mysql-connector-java-5.1.18-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
